# evidently-upload-service

./: .gitignore  Dockerfile  README.md  env.exmpale  flake.nix  pyproject.toml
upload_service/: __init__.py  upload_service.py
upload_service/static/css/: custom.css
upload_service/templates/: index.html
